Simplify checkbox code. Fix rounding probability.

--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     <div id="container">
         <div id="boxes">
             <div>
-                <input type="checkbox" id="low-e-string">E string
-                <input type="checkbox" id="a-string">A string
-                <input type="checkbox" id="d-string">D string
+                <input type="checkbox" class="string-name" value="E">E string
+                <input type="checkbox" class="string-name" value="A">A string
+                <input type="checkbox" class="string-name" value="D">D string
             </div>
             <div>
-                <input type="checkbox" id="g-string">G string
-                <input type="checkbox" id="b-string">B string
-                <input type="checkbox" id="high-e-string">e string
+                <input type="checkbox" class="string-name" value="G">G string
+                <input type="checkbox" class="string-name" value="B">B string
+                <input type="checkbox" class="string-name" value="e">e string
             </div>
         </div>
         <button id="new-note-button">New Note</button>
